--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
-    <title>Frontend Mentor | QR code component</title>
+    <title>QR Code</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
